[gd_scene load_steps=3 format=3 uid="uid://dekqlh0fecwdh"]

[ext_resource type="Script" uid="uid://dwu0ubxolecer" path="res://TradeSelection.gd" id="1_rx50i"]
[ext_resource type="Texture2D" uid="uid://xh7wwx1airyc" path="res://Art/Stadium.png" id="2_23xu7"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_rx50i")
metadata/_edit_horizontal_guides_ = [0.0]

[node name="Stadium" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(1.152, 1.15098)
texture = ExtResource("2_23xu7")

[node name="Panel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="TradeScroll" type="ScrollContainer" parent="."]
offset_left = 64.0
offset_right = 704.0
offset_bottom = 648.0

[node name="TradeBox" type="VBoxContainer" parent="TradeScroll"]
layout_mode = 2

[node name="Select" type="Button" parent="."]
offset_left = 864.0
offset_top = 256.0
offset_right = 992.0
offset_bottom = 320.0
text = "Add To Trade"

[node name="Back" type="Button" parent="."]
offset_left = 864.0
offset_top = 448.0
offset_right = 992.0
offset_bottom = 512.0
text = "Back"

[connection signal="pressed" from="Select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
